--- a/public/templates/users/list.html
+++ b/public/templates/users/list.html
@@ -5,17 +5,13 @@
 
 		 <tr>
 			 <th>#</th>
-			 <th>First Name</th>
-			 <th>Last Name</th>
+			 <th>Name</th>
 			 <th>Email</th>
-			 <th>Phone</th>
 		 </tr>
 			<tr ng-repeat="user in users">
-						<td>{{user.id}}</td>
-						<td>{{user.first_name}}</td>
-						<td>{{user.last_name}}</td>
-						<td>{{user.email}}</td>
-						<td>{{user.phone}}</td>
+						<td>{{user.ID}}</td>
+						<td>{{user.display_name}}</td>
+						<td>{{user.user_email}}</td>
 			</tr>
 	 </table>
  </div>
