--- a/public/templates/users/create.html
+++ b/public/templates/users/create.html
@@ -1,3 +1,4 @@
-{{myprofile}}
+{{profile.user_login}}
+{{msg}}
 dfkjlkdfjdkls
-<input type="text" ng-model="{{myprofile.ID}}">
+<input type="text" ng-model="profile.ID">
