--- a/public/templates/users/list.html
+++ b/public/templates/users/list.html
@@ -16,4 +16,5 @@
 						<td colspan="2"><a ng-click=edit(user.ID)><i class="fa fa-wrench" aria-hidden="true"></i> </a>    <button ng-href="#"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
 			</tr>
 	 </table>
+	 <input type="text" ng-model = "profile.ID">
  </div>
