--- a/public/templates/users/list.html
+++ b/public/templates/users/list.html
@@ -16,5 +16,5 @@
 						<td colspan="2"><a ng-href='#/user/update/{{user.ID}}')><i class="fa fa-wrench" aria-hidden="true"></i> </a>    <button ng-href="#"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
 			</tr>
 	 </table>
-	 <input type="text" ng-model = "profile.ID">
+	 <pagination num-pages="noOfPages" current-page="currentPage" class="pagination-small"></pagination>
  </div>
