--- a/public/templates/users/list.html
+++ b/public/templates/users/list.html
@@ -9,12 +9,13 @@
 			 <th>Email</th>
 			 <th>Actions</th>
 		 </tr>
-		 	<tr ng-repeat="user in users">
+		 	<tr dir-paginate="user in customers |  orderBy: 'display_name' | itemsPerPage: itemsPerPage">
 						<td>{{user.ID}}</td>
 						<td>{{user.display_name}}</td>
 						<td>{{user.user_email}}</td>
 						<td colspan="2"><a ng-href='#/user/update/{{user.ID}}')><i class="fa fa-wrench" aria-hidden="true"></i> </a>    <button ng-href="#"><i class="fa fa-trash-o" aria-hidden="true"></i></button></td>
 			</tr>
 	 </table>
-	 <pagination num-pages="noOfPages" current-page="currentPage" class="pagination-small"></pagination>
+	 <dir-pagination-controls></dir-pagination-controls>
+
  </div>
