User registration completed

--- a/public/templates/users/create.html
+++ b/public/templates/users/create.html
@@ -10,7 +10,7 @@
                             <h3 ng-if="!profile.ID" class="panel-title">Add New User</h3>
                         </div>
 
-                        <form class="form-horizontal">
+                        <form class="form-horizontal" ng-submit="submitForm()" name="registrationForm" novalidate>
                             <div class="panel-body">
 
                                 <div class="col-md-12 clearfix">
@@ -26,9 +26,9 @@
                                     <label class="col-sm-3 control-label"
                                            ng-class="">Username:</label>
                                     <div class="col-sm-3">
-                                        <input type="text" class="form-control input-sm" id="userName"
-                                               placeholder="Username" ng-model="profile.user_login"
-                                               ng-blur="isemployeeUsernameexist(employeeDto.userName)">
+                                        <input type="text" class="form-control input-sm" id="user_login" name="user_login"
+                                               placeholder="Username" ng-model="profile.user_login" required> <span ng-show="registrationForm.user_login.$touched && registrationForm.user_login.$error.required">Required</span>
+
                                     </div>
                                 </div>
 
@@ -38,28 +38,25 @@
 										ng-show="employeeDto.userName === undefined || employeeDto.userName === '' || employeeDto.userName == null"
 										style="color: red">*</span> --></label>
                                     <div class="col-sm-3">
-                                        <input type="text" class="form-control input-sm" id="email_id"
+                                        <input type="text" class="form-control input-sm" name="user_email"
                                                placeholder="Email" ng-model="profile.user_email" required
-                                               ng-disabled="true">
+                                               ng-disabled="profile.ID">
                                     </div>
+                                    <span class="help-inline" ng-show="registrationForm.user_email.$touched && registrationForm.user_email.$error.required">Required</span>
                                 </div>
 
                                 <div class="form-group col-sm-12">
-                                    <label class="col-sm-3 control-label"
-                                           ng-class="{mandate:employeeDto.firstName === undefined || employeeDto.firstName === '' || employeeDto.lastName === undefined || employeeDto.lastName === ''}">Full
-                                        Name:<!-- <span
-										ng-show="employeeDto.firstName === undefined || employeeDto.firstName === '' || employeeDto.lastName === undefined || employeeDto.lastName === ''"
-										style="color: red">*</span> -->
+                                    <label class="col-sm-3 control-label">Full Name:
                                     </label>
                                     <div class="col-sm-9 row">
                                         <div class="col-sm-3">
                                             <input type="text" class="form-control input-sm"
-                                                   id="first_name" placeholder="First Name"
-                                                   ng-model="profile.display_name" ng-pattern="/^[A-z ]+$/">
+                                                   name="display_name" placeholder="First Name"
+                                                   ng-model="profile.display_name" ng-pattern="/^[A-z ]+$/" required>
                                         </div>
                                     </div>
                                 </div>
-
+                                <span class="help-inline" ng-show="registrationForm.display_name.$touched && registrationForm.display_name.$error.required">Required</span>
                                 <div class="form-group col-sm-12">
                                     <label class="col-sm-3 control-label"
                                            ng-class="">Gender
@@ -68,35 +65,34 @@
 										style="color: red">*</span> -->
                                     </label>
                                     <div class="col-sm-3">
-                                        <select class="form-control" ng-model="profile.gender">
+                                        <select class="form-control" ng-model="profile.gender" name="gender" required>
                                             <option value="">Select Gender</option>
                                             <option>Female</option>
                                             <option>Male</option>
                                         </select>
+                                        <span class="help-inline" ng-show="registrationForm.gender.$touched && registrationForm.gender.$error.required">Required</span>
                                     </div>
                                 </div>
 
-                                <div class="form-group col-sm-12">
-                                    <label class="col-sm-3 control-label"
-                                           ng-class="">Birthday:<!-- <span
-										ng-show="employeeDto.dob === undefined || employeeDto.dob === ''"
-										style="color: red">*</span> --></label>
-                                    <div class="col-sm-3">
-                                        <div class="date input-group">
-                                            <input type="text" class="form-control input-sm"
-                                                   ng-model="employeeDto.dob" placeholder="dd/mm/yyyy" required
-                                                   readonly="true"> <span class="input-group-addon"><i
-                                                class="fa fa-calendar"></i> </span>
-                                        </div>
-                                    </div>
-                                </div>
+                                <!--<div class="form-group col-sm-12">-->
+                                    <!--<label class="col-sm-3 control-label"-->
+                                           <!--ng-class="">Birthday:&lt;!&ndash; <span-->
+										<!--ng-show="employeeDto.dob === undefined || employeeDto.dob === ''"-->
+										<!--style="color: red">*</span> &ndash;&gt;</label>-->
+                                    <!--<div class="col-sm-3">-->
+                                        <!--<div class="date input-group">-->
+                                            <!--<input type="text" class="form-control input-sm"-->
+                                                   <!--ng-model="employeeDto.dob" placeholder="dd/mm/yyyy" required-->
+                                                   <!--readonly="true"> <span class="input-group-addon"><i-->
+                                                <!--class="fa fa-calendar"></i> </span>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
                                 <div class="clearfix"></div>
 
                                 <div class="mb20">
                                     <div class="col-sm-9 col-sm-offset-3">
-                                        <button ng-click="saveNewEmployee()"
-                                                ng-disabled=" !profile.user_nicename || !profile.gender || disableView"
-                                                class="btn btn-success" type="submit">Save</button>
+                                        <button type="submit" class="btn btn-primary" ng-disabled="registrationForm.user_login.$invalid || registrationForm.user_email.$invalid || registrationForm.gender.$invalid || registrationForm.display_name.$invalid">Submit</button>
                                     </div>
                                 </div>
 
